# axum-ffmpeg-example

./: Cargo.toml  README.md  wasmer.toml
src/: main.rs
